<resources>
    <string name="app_name">UBS+</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="entrar">Entrar</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="email">Email</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="password">TODO</string>
    <string name="ubs_logo">UBS+</string>
    <string name="menu_principal">Menu principal</string>
    <string name="perfil_usuario">Perfil do usuário</string>
    <string name="consultas">TODO</string>
    <string name="imagem_agendar">TODO</string>
    <string name="historico_consultas">Histórico de consultas</string>
    <string name="imagem_usuario">TODO</string>
    <string name="imagem_historico">TODO</string>
    <string name="agendar_consultas">Agendar consulta</string>
    <string name="sair">Sair</string>
    <string name="consultas_agendadas">Consultas agendadas</string>
    <string name="registro">Registre-se aqui</string>
    <string name="pergunta_acesso">Ainda não possui um acesso?</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="nova_consulta">Nova consulta</string>
    <string name="tipo_de_consulta">Tipo de Consulta</string>
    <string name="ubs">UBS</string>
    <string name="data">Data</string>
    <string name="horario">Horário</string>
    <string name="remarcar">Remarcar</string>
    <string name="cancelar">Cancelar</string>
    <string name="data_selecionada">Data Selecionada:</string>
    <string name="selecione_um_horario">Selecione um horário:</string>
    <string name="confirmar_agendamento">Confirmar Agendamento</string>
    <string name="escolha_uma_data">Escolha uma data</string>
    <string name="agendar_consulta">Agendar Consulta</string>
    <string name="escolha_uma_ubs_proxima">Escolha uma UBS próxima</string>
    <string name="historico_de_consultas">Histórico de Consultas</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="endere_o_completo">Endereço Completo</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="agendamento_de_consulta">Agendamento de consulta</string>
    <string name="especialidades">Especialidades</string>
    <string name="agendar">Agendar</string>
    <string name="voltar">Voltar</string>
    <string name="endereco_completo_label">Endereço Completo:</string>
    <string name="telefone_cadastrado_label">Telefone Cadastrado:</string>
    <string name="nome_completo_label">Nome Completo:</string>
    <string name="informacoes_pessoais">Informações pessoais</string>
    <string name="emailLabel">E-mail</string>
    <string-array name="spinner_options">
        <item>Clinico Geral</item>
        <item>Dermatologista</item>
        <item>Pediatra</item>
        <item>Ginecologista</item>
        <item>Urologista</item>
        <item>Geriatra</item>
        <item>Ortopedista</item>
        <item>Exames</item>
        <item>Vacinas</item>
    </string-array>
</resources>