<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:paddingTop="50dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_principal"
        android:textColor="#2F4C73"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_newAppointment"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/agendar_consultas"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#0F3D6F"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        app:icon="@drawable/calendar"
        app:iconTint="#000000" />

    <Button
        android:id="@+id/button_scheduled"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/consultas_agendadas"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#0F3D6F"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        app:icon="@drawable/calendar_checked"
        app:iconTint="#000000" />

    <Button
        android:id="@+id/button_history"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/historico_consultas"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#0F3D6F"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        app:icon="@drawable/edit"
        app:iconTint="#000000" />

    <Button
        android:id="@+id/button_userProfile"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/perfil_usuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#0F3D6F"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        app:icon="@drawable/user"
        app:iconTint="#000000" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue"
        android:text="@string/sair"
        android:textColor="@color/white" />

</LinearLayout>
