<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:id="@+id/textView_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informacoes_pessoais"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/navy_blue"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <!-- Título -->
    <LinearLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp"
        android:layout_marginBottom="16dp">

        <!-- Nome Completo -->
        <TextView
            android:id="@+id/textView_fullNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_completo_label"
            android:textSize="16sp"
            android:textColor="@color/navy_blue"
            android:textStyle="bold"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/textView_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/navy_blue"
            android:paddingBottom="16dp" />

        <!-- Nome Completo -->
        <TextView
            android:id="@+id/textView_emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailLabel"
            android:textSize="16sp"
            android:textColor="@color/navy_blue"
            android:textStyle="bold"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/navy_blue"
            android:paddingBottom="16dp" />

        <TextView
            android:id="@+id/textView_cpfLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpf"
            android:textSize="16sp"
            android:textColor="@color/navy_blue"
            android:textStyle="bold"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/textView_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/navy_blue"
            android:paddingBottom="16dp" />

        <!-- Telefone -->
        <TextView
            android:id="@+id/textView_phoneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone_cadastrado_label"
            android:textSize="16sp"
            android:textColor="@color/navy_blue"
            android:textStyle="bold"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/textView_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/navy_blue"
            android:paddingBottom="16dp" />

        <!-- Endereço -->
        <TextView
            android:id="@+id/textView_addressLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endereco_completo_label"
            android:textSize="16sp"
            android:textColor="@color/navy_blue"
            android:textStyle="bold"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/textView_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/navy_blue"
            android:paddingBottom="16dp" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/voltar" />

    </LinearLayout>

</LinearLayout>